--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Vicente Jiménez"
 title_separator          : "-"
-name                     : &name "Vicente Jiménez G."
+name                     : &name "Vicente Jiménez"
 description              : &description "Hi! I'm a junior researcher applying to Economics PhD programs"
 url                      : https://vjimenezg.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
