--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vicente Jimenez G."
   avatar           : "Perfil.jpg"
-  bio              : "Hi! I'm a junior researcher applying to Economics PhD programs"
+  bio              :
   location         : "Santiago, Chile"
   employer         :
   pubmed           : 
