--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vicente Jimenez G."
   avatar           : "Perfil.jpg"
-  bio              :
+  bio              : ""
   location         : "Santiago, Chile"
   employer         :
   pubmed           : 
