--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Vicente Jimenez G."
+  name             : "Vicente Jiménez Gimpel"
   avatar           : "Perfil.jpg"
   bio              : ""
   location         : "Santiago, Chile"
