--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Vicente Jiménez"
+  name             : "Vicente Jiménez G."
   avatar           : "Perfil.jpg"
   bio              : ""
   location         : "Santiago, Chile"
